--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,24 @@ input {
   width: 100%;
   font-size: 1.2rem;
 }
+
+.card {
+  align-content: center;
+  border: 1px solid gray;
+  border-radius: 6px;
+  margin: 0px 10px 10px 0px; 
+  overflow: hidden;
+}
+.card p {
+  padding: 5px;
+  text-align: center;
+}
+.card img {
+  max-height: 170px;
+}
+
+.card-grid {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
